Code cleanups for java 17 (#257)